# terrarium-pedals

./: .gitignore  .gitmodules  Makefile
cenote/: Makefile  README.md  cenote.cpp  manual.excalidraw
cenote/lib/: cenote_delay.h  control_recorder.h  settings.h  state.h  vibrato.h
el_wormhole/: Makefile  delay.h  el_wormhole.cpp  osc.h  vibrato.h
flib/: fmath.h  freqshift.h  fsw.h  grain.h  ipoke.h  knob.h  shiftknobman.h  stack.h  stack_test  stack_test.cpp  taptempo.h  template.h  window.h  xfade.h
flib/hw/: knob.h  ledwrap.h
glitch/: Makefile  glitch.cpp
glitch/lib/: glitch.h  ipoke.h  ledwrap.h  shiftknobman.h  stack.h  template.h
sandbox/: CMakeLists.txt  FakeDaisyPetal.h  Info_debug.plist  Main.cpp  SandboxedPedal.h  daisy_petal.h
template/: Makefile  template.cpp
wigglrs/: Makefile  test.cpp  wigglrs.cpp
wigglrs/lib/: glitch.h  ipoke.h  wigglr.h  wrm.h
wrms/: Makefile  wrms.cpp
wrms/lib/: hphasor.h  ipoke.h  wrm.h
